--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ description: >
   Jekyll Template for Project Websites
   providing documentation and blog post pages.
 
-baseurl: "/jekyll-doc-theme" # the subpath of your site, e.g. /blog/
-url: https://aksakalli.github.io/jekyll-doc-theme # the base hostname & protocol for your site
-git_address: https://github.com/aksakalli/jekyll-doc-theme
+baseurl: "/" # the subpath of your site, e.g. /blog/
+url: https://hyesungoh.github.io/ # the base hostname & protocol for your site
+git_address: https://github.com/hyesungoh
 git_edit_address: https://github.com/aksakalli/jekyll-doc-theme/blob/gh-pages
 
 # theme options from https://bootswatch.com/
