--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: >
   providing documentation and blog post pages.
 
 baseurl: "/" # the subpath of your site, e.g. /blog/
-url: https://hyesungoh.github.io/ # the base hostname & protocol for your site
-git_address: https://github.com/hyesungoh
+url: "https://hyesungoh.github.io" # the base hostname & protocol for your site
+git_address: https://github.com/aksakalli/jekyll-doc-theme
 git_edit_address: https://github.com/aksakalli/jekyll-doc-theme/blob/gh-pages
 
 # theme options from https://bootswatch.com/
