--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: Jekyll Doc Theme
-email: your-email@domain.com
+title: "Hyesung Oh's Blog"
+email: "haesungoh414@gmail.com"
 description: >
   Jekyll Template for Project Websites
   providing documentation and blog post pages.
 
 baseurl: "/" # the subpath of your site, e.g. /blog/
 url: "https://hyesungoh.github.io" # the base hostname & protocol for your site
-git_address: https://github.com/aksakalli/jekyll-doc-theme
+git_address: https://github.com/hyesungoh
 git_edit_address: https://github.com/aksakalli/jekyll-doc-theme/blob/gh-pages
 
 # theme options from https://bootswatch.com/
