--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -1,16 +1,19 @@
-- title: Getting Started
-  docs:
-  - home
-  - themes
-  - customization
+# - title: Getting Started
+#   docs:
+#   - home
+#   - themes
+#   - customization
+#
+# - title: Examples
+#   docs:
+#   - cheatsheet
+#   - font-awesome
+#   - bootstrap
 
-- title: Examples
-  docs:
-  - cheatsheet
-  - font-awesome
-  - bootstrap
+# - title: Test
+#   docs:
+#   - testDocs1
 
-- title: Test
+- title: Python
   docs:
-  - testDocs1
-  - testDocs2
+  - If문 한줄로 쓰는 방법
