--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -22,9 +22,12 @@
   docs:
   - If문 한줄로 쓰는 방법
   - 삼항연산자
+  - 집합 자료형
 
 - title: Ruby / Ruby on Rails
 
 - title: Algorithm
+  docs:
+  - 서로 다른 부분 문자열의 개수
 
 - title: Machine Learning
