--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >
   providing documentation and blog post pages.
 
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://127.0.0.1:4000/" # the base hostname & protocol for your site
+url: "http://hyesungoh.github.io/" # the base hostname & protocol for your site
 
 # baseurl: "/" # the subpath of your site, e.g. /blog/
 # url: "https://hyesungoh.github.io" # the base hostname & protocol for your site
