--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -27,7 +27,10 @@
   - Map 함수
   - Filter 함수
 
-# - title: Ruby / Ruby on Rails
+- title: Ruby on Rails
+  docs:
+  - Strong parameters
+
 
 - title: Algorithm
   docs:
