rename category Web to ETC permalink change

--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -37,7 +37,7 @@
   - BOJ-1654-랜선 자르기
   - BOJ-11478-서로 다른 부분 문자열의 개수
 
-- title: Web
+- title: ETC
   docs:
   - Jekyll - Tag was never closed Bug
 
